# cunhado

./: .gitignore  DEVELOPER_GUIDE.md  Makefile  README.md  cunhado_secrets.env.example  cunhado_settings.yaml.example  pyproject.toml
.clinerules/: cunhado.md
.github/workflows/: cunhado.yml
cunhado/: config.py  main.py  pyproject.toml
src/: main.py
src/cunhado/: config.py  logging.py  main.py  paths.py
tests/: test_config.py
