[project]
name = "cunhado"
version = "0.1.0"
description = "Your cuñado thinks he knows everything"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=4.0.0",
    "pydantic-settings>=2.11.0",
    "pydantic-yaml>=1.1.0",
    "python-dotenv>=1.2.1",
    "strands-agents-tools>=0.2.13",
    "strands-agents[mistral,openai]>=1.14.0",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
preview = true

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
python_version = '3.11'
exclude = '.*_pb2.*'
cache_dir = '$MYPY_CONFIG_FILE_DIR/.mypy_cache'
plugins = ['pydantic.mypy']

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.14.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "./src"
]